--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -20,4 +20,14 @@
 
   <a href="#" class="comment" onclick="return false;">点击查看评论</a>
   <div id="disqus_thread"></div>
+<script type="text/javascript">
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'piccus.github.io'; // required: replace example with your forum shortname 这个地方需要改成你配置的网站名
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
 </div>
